cc: Disable translucent solid color layers in Mac.

This CL prevents the relaxation introduced in
https://crrev.com/c/1387385 from taking effect in Mac. The reason is
that solid color quads that are not fully opaque are not being displayed
with the right transparency in that OS. This is a temporary fix until
that bug is addressed.

Test: issue in bug is no longer seen on a macOS Sierra 10.12.6.
Bug: 922899
Change-Id: Id24b07e767ef89f75a2d961d16a6887a19c9835a
Reviewed-on: https://chromium-review.googlesource.com/c/1450875
Reviewed-by: enne <enne@chromium.org>
Commit-Queue: Andres Calderon Jaramillo <andrescj@chromium.org>
Cr-Commit-Position: refs/heads/master@{#628869}
Former-commit-id: 48e2ce8019bf69e38fd6f2aedeb890567d189b93